# aimsun_proj_vscode

./: .gitignore  CMakeLists.txt  README.md
aimsun_lib/: a2kernel22.lib  acontrol22.lib
demand_data/: Link.txt  Turn.txt
include/: AAPI.h  AAPI_Util.h  AKIProxie.h  ANGConProxie.h  CIProxie.h
src/: AAPI.cxx  AAPI_aramco.cxx  AAPI_test.cxx
test/: CMakeLists.txt  local_file_test.cpp
